force-app/main/default/objects/Lead_Routing_Settings__c/Lead_Routing_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store DUNS Lead Routing field information.</description>
    <label>Lead Routing Settings</label>
</CustomObject>