force-app/main/default/objects/Lead_Routing_Settings__c/fields/Account_User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_User_Lookup__c</fullName>
    <description>Used to store Account ADA.</description>
    <inlineHelpText>Please populate the Originating Account User lookup API Name.</inlineHelpText>
    <label>Account User Lookup</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>