force-app/main/default/objects/Lead_Routing_Settings__c/fields/Lead_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_RecordType_Name__c</fullName>
    <description>Used to store Record Type Name.</description>
    <inlineHelpText>Please provide appropriate Record Type Name.</inlineHelpText>
    <label>Lead RecordType Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>