force-app/main/default/objects/Lead_Routing_Settings__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Used to store DPR &amp; Non DPR values.</description>
    <inlineHelpText>Please provide value for Product Interest.</inlineHelpText>
    <label>Product Interest</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>